<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dicoding.mysubmissionintermediate.ui.login.LoginActivity">

    <ScrollView
        android:id="@+id/r3b8rt1jx6p7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:layout_marginStart="120dp"
                android:layout_marginEnd="120dp"
                app:srcCompat="@drawable/image_welcome" />

            <TextView
                android:id="@+id/LoginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginBottom="20dp"
                android:text="@string/enter"
                android:textColor="#000000"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="42dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/se3e4e5sw1cr8bffffff"
                android:orientation="vertical"
                android:paddingHorizontal="17dp"
                android:paddingVertical="18dp">

                <com.dicoding.mysubmissionintermediate.ui.costumview.EmailEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:ellipsize="end"
                    android:inputType="textEmailAddress"
                    android:scrollHorizontally="true"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="42dp"
                android:layout_marginBottom="120dp"
                android:background="@drawable/se3e4e5sw1cr8bffffff"
                android:orientation="vertical"
                android:paddingHorizontal="17dp"
                android:paddingVertical="18dp">

                <com.dicoding.mysubmissionintermediate.ui.costumview.PasswordEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="16dp"
                    android:background="@null"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:singleLine="true" />
            </LinearLayout>

            <TextView
                android:id="@+id/rxoejpwzcls"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="45dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:text="@string/attention"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="321dp"
                android:layout_height="64dp"
                android:layout_marginHorizontal="42dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:alpha="1"
                android:backgroundTint="@color/blue"
                android:text="@string/enter"
                tools:alpha="100"
                android:layout_marginBottom="5dp" />

            <TextView
                android:id="@+id/tvCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="110dp"
                android:text="@string/option"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>

    <!-- Centered ProgressBar -->
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center" />
</FrameLayout>
